[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/AudioController.gd" type="Script" id=1]

[node name="AudioController" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]

[node name="UiPlayer" type="AudioStreamPlayer" parent="."]

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]
